Contact section updated

--- a/index.html
+++ b/index.html
@@ -454,28 +454,12 @@
         <p style="font-size: 40px; font-weight: bold;">Contact</p>
       </div>
     </div>
-    <div class="row" style="text-align: center;">
+    <div class="row text-center" style="text-align: center;">
       <div class="col s12 m4 l4">
 <ul class="collapsible" id="con1" data-collapsible="accordion" style="border: 1px solid #34495e; background-color: #fff !important;">
     <li>
       <div class="collapsible-header">E-mail   <i class="fa fa-envelope"></i></div>
       <div class="collapsible-body"><span><a href="mailto:dwl3c0in@gmail.com?subject=Besoin de votre aide pour un projet." id="themail">  dwl3c0in@gmail.com</a></span></div>
-    </li>
-  </ul>
-</div>
-<div class="col s12 m4 l4">
-<ul class="collapsible" id="con2" data-collapsible="accordion" style="border: 1px solid #34495e; background-color: #fff !important;">
-    <li>
-      <div class="collapsible-header center-align">Téléphone    <i class="fa fa-phone"></i></div>
-      <div class="collapsible-body"><span><a href="tel:+33659920699" id="themail">  06-59-92-06-99</a></span></div>
-    </li>
-  </ul>
-</div>
-<div class="col s12 m4 l4">
-<ul class="collapsible" id="con3" data-collapsible="accordion" style="border: 1px solid #34495e; background-color: #fff !important;">
-    <li>
-      <div class="collapsible-header">Services   <i class="fa fa-medkit"></i></div>
-      <div class="collapsible-body"><span><a href="http://www.devfacile.rf.gd" target="_blank" id="themail">  DevFacile</a></span></div>
     </li>
   </ul>
 </div>
