--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@
 
 
 
-<section id="contact">
-  <div class="container-fluid">
+<section id="contact" class="text-center">
+  <div class="container-fluid text-center">
     <div class="row">
       <div class="col s12 m12 l12 center-align">
         <p style="font-size: 40px; font-weight: bold;">Contact</p>
       </div>
     </div>
-    <div class="row text-center" style="text-align: center;">
+    <div class="row text-center center-align" style="text-align: center;">
       <div class="col s12 m4 l4">
 <ul class="collapsible" id="con1" data-collapsible="accordion" style="border: 1px solid #34495e; background-color: #fff !important;">
     <li>
