--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
       </div>
     </div>
     <div class="row text-center center-align" style="text-align: center;">
-      <div class="col s12 m4 l4">
+      <div class="class="offset-l4 col s12 m4 l4"">
 <ul class="collapsible" id="con1" data-collapsible="accordion" style="border: 1px solid #34495e; background-color: #fff !important;">
     <li>
       <div class="collapsible-header">E-mail   <i class="fa fa-envelope"></i></div>
