--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 <ul class="collapsible" id="con1" data-collapsible="accordion" style="border: 1px solid #34495e; background-color: #fff !important;">
     <li>
       <div class="collapsible-header">E-mail   <i class="fa fa-envelope"></i></div>
-      <div class="collapsible-body"><span><a href="mailto:dwl3c0in@gmail.com?subject=Besoin de votre aide pour un projet." id="themail">  dwl3c0in@gmail.com</a></span></div>
+      <div class="collapsible-body"><span><a href="mailto:david.lecoin@yahoo.com?subject=Besoin" id="themail">  david.lecoin@yahoo.com</a></span></div>
     </li>
   </ul>
 </div>
