--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
     <div class="row">
       <div class="col s12 m12 l12" style="text-align: center;">
-        <h3 id="titlelol">David Lecoin, Développeur Web <br>passionné, créatif et curieux</h3>
+        <h3 id="titlelol">David Lecoin <br>Développeur Web Back-End</h3>
         <a id="btnlol" href="#aboutme"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
       </div>
     </div>
@@ -115,16 +115,12 @@
     <div class="card-tabs" style="background-color: #ecf0f1 !important;">
       <ul class="tabs tabs-fixed-width" style="background-color: #ecf0f1 !important;">
         <li class="tab" style="background-color: #ecf0f1;"><a class="active" href="#leposi">Positif</a></li>
-        <li class="tab" style="background-color: #ecf0f1;"><a href="#lenega">Négatif</a></li>
       </ul>
     </div>
     <div class="card-content grey lighten-4" style="text-align: center; background-color: #ecf0f1 !important;">
-      <div id="leposi" style="background-color: #ecf0f1;">Maîtrise des bases : HTML, CSS, JavaScript, JQuery, SQL, PHP et BootStrap.<br>
-        Créer des sites qui se démarquent des autres, faciliter l'information et répondre aux utilisateurs.<br>
-        Néglige les CMS car j'aime me différencier des autres, donc monter mes sites entièrement seul en utilisant des FrameWorks/Librairies (BootStrap et Materialize)<br>
+      <div id="leposi" style="background-color: #ecf0f1;">Maîtrise des bases : HTML, CSS, JavaScript, SQL, PHP et BootStrap.<br>
+        VueJS, Angular, ReactJS, NodeJS, BootStrap, Materialize, Vue-Material, PassportJS, Laravel, CodeIgniter <br>
         Un large esprit, ouvert à tous les sujets, capable de critiquer et apporter des solutions aux personnes qui sont dans le besoin.</div>
-      <div id="lenega" style="background-color: #ecf0f1;">La gestion et l'administration des bases de données<br>
-        Encore beaucoup à apprendre par rapport à un Développeur Web Sénior</div>
     </div>
   </div>
       </div>
@@ -133,48 +129,6 @@
 </section>
 
 
-
-
-
-<script type="text/javascript">
-  function showpar1(){
-    var showparcours1 = document.getElementById('parcours1')
-    if( showparcours1.style.display === "none"){
-        showparcours1.style.display = "block";
-    }
-    else{
-        showparcours1.style.display = "none";
-    }
-
-    var showparcours2 = document.getElementById('parcours2')
-    if( showparcours2.style.display === "block"){
-      showparcours2.style.display = "none"
-    }
-    else{
-      showparcours2.style.display = "none";
-    }
-}
-</script>
-
-<script>
-  function showpar2(){
-    var showparcours2 = document.getElementById('parcours2')
-    if( showparcours2.style.display === "none"){
-      showparcours2.style.display = "block"
-    }
-    else{
-      showparcours2.style.display = "none";
-    }
-
-    var showparcours1 = document.getElementById('parcours1')
-    if(showparcours1.style.display === "block"){
-      showparcours1.style.display = "none"
-    }
-    else{
-      showparcours1.style.display = "none";
-    }
-  }
-</script>
 
 <section id="parcours" style="background-color: #ecf0f1 !important;">
 
@@ -186,7 +140,7 @@
     </div>
   <div class="row">
     <div class="col s12 m6 l6" style="text-align: center; margin-top: 20px; margin-bottom: 20px; background-color: #ecf0f1 !important">
-  <button class='btn' id="btnshow" onclick="showpar1();" style="background-color: #34495e;color: black;">Études</a>
+  <button class='btn' id="btnshow" onclick="showpar1();" style="background-color: #34495e;color: black;">Formations</a>
     </div>
     <div class="col s12 m6 l6" style="text-align: center; margin-top: 20px; margin-bottom: 20px; background-color: #ecf0f1 !important">
     <button class='btn' id="btnshow1" onclick="showpar2();" style="background-color: #34495e; color: black;">Professionnel</a>
@@ -200,23 +154,13 @@
 <section id="parcours1" style="display: none;">
   <div class="container-fluid">
     <div class="row">
-       <div class="col s12 m12 l6">
+       <div class="col s12 m12 l6 offset-l3">
           <div class="card" style="text-align: center;">
             <div class="card-content black-text" style="background-color: #fff">
               <span class="card-title" style="text-align: center;"><h3>Formation Web  <i class="fa fa-chrome" aria-hidden="true"></i></h3></span>
             </div>
             <div class="card-content black-text" style="background-color: #ecf0f1">
-              <p>Formation de 3 mois dans le développement web (non reconnu par l'état) sur Udemy.</p>
-            </div>
-      </div>
-       </div>
-       <div class="col s12 m12 l6">
-          <div class="card" style="text-align: center;">
-            <div class="card-content black-text"  style="background-color: #fff">
-              <span class="card-title" style="text-align: center;"><h3>ReactJS+Redux  <i class="fa fa-facebook-square" aria-hidden="true"></i></h3></span>
-            </div>
-            <div class="card-content black-text" style="background-color: #ecf0f1">
-              <p>Formation complète ReactJS + Redux.</p>
+              <p>Titre Professionnel - Développeur Web / Web Mobile - Niveau III</p>
             </div>
       </div>
        </div>
@@ -227,7 +171,17 @@
 <section id="parcours2" style="display: none;">
   <div class="container-fluid">
     <div class="row">
-      <div class="col s12 m12 l6">
+       <div class="col s12 m12 l4">
+          <div class="card" style="text-align: center;">
+            <div class="card-content black-text" style="background-color: #fff">
+              <span class="card-title" style="text-align: center;"><h3>Pavot  <i class="fa fa-handshake-o" aria-hidden="true"></i></h3></span>
+            </div>
+            <div class="card-content black-text" style="background-color: #ecf0f1">
+              <p>Création du site <a href="https://pharmacie-centrale-solesmes.fr" target="_blank">Pharmacie Pavot<i class="fa fa-location-arrow"></i></a>.</p>
+            </div>
+      </div>
+       </div>
+      <div class="col s12 m12 l4">
           <div class="card" style="text-align: center;">
             <div class="card-content black-text"  style="background-color: #fff">
               <span class="card-title" style="text-align: center;"><h3>Tosca  <i class="fa fa-cutlery" aria-hidden="true"></i></h3></span>
@@ -237,7 +191,7 @@
             </div>
       </div>
        </div>
-       <div class="col s12 m12 l6">
+       <div class="col s12 m12 l4">
           <div class="card" style="text-align: center;">
             <div class="card-content black-text" style="background-color: #fff">
               <span class="card-title" style="text-align: center;"><h3>KeyWOrd  <i class="fa fa-handshake-o" aria-hidden="true"></i></h3></span>
@@ -268,7 +222,7 @@
               var myPieChart = new Chart(ctxP, {
                   type: 'pie',
                   data: {
-                      labels: ["HTML", "CSS", "JavaScript"],
+                      labels: ["HTML5", "CSS3", "JavaScript"],
                       datasets: [
                           {
                               data: [100, 100, 80],
@@ -288,12 +242,12 @@
                 var mynewPieChart = new Chart(ctxP, {
                     type: 'pie',
                     data: {
-                        labels: ["PHP", "Ruby", "Python"],
+                        labels: ["PHP", "NodeJS"],
                         datasets: [
                             {
-                                data: [80, 30, 70],
-                                backgroundColor: ["#1DABB8", "#9b59b6", "#34495e"],
-                                hoverBackgroundColor: ["#1DABB8", "#9b59b6", "#2c3e50"]
+                                data: [80, 80],
+                                backgroundColor: ["#1DABB8", "#9b59b6"],
+                                hoverBackgroundColor: ["#1DABB8", "#9b59b6"]
                             }
                         ]
                     },  
@@ -308,12 +262,12 @@
                 var mynewPieChart = new Chart(ctxP, {
                     type: 'pie',
                     data: {
-                        labels: ["BootStrap", "ReactJS", "Django", "VueJS", "Angular"],
+                        labels: ["BootStrap", "ReactJS", "Angular", "VueJS"],
                         datasets: [
                             {
                                 data: [90, 80, 80, 70, 60],
-                                backgroundColor: ["#1DABB8", "#9b59b6", "#34495e", "#95a5a6", "#3A539B"],
-                                hoverBackgroundColor: ["#1DABB8", "#9b59b6", "#2c3e50", "#7f8c8d", "#1F3A93"]
+                                backgroundColor: ["#1DABB8", "#9b59b6", "#34495e", "#95a5a6"],
+                                hoverBackgroundColor: ["#1DABB8", "#9b59b6", "#2c3e50", "#7f8c8d"]
                             }
                         ]
                     },  
@@ -329,12 +283,12 @@
           new Chart(document.getElementById("newlastpieCharts"), {
    type: 'doughnut',
     data: {
-      labels: ["SQL", "SQLite", "MongoDB"],
+      labels: ["MySQL", "MongoDB"],
       datasets: [
         {
           label: "BDD",
           backgroundColor: ["#1DABB8", "#9b59b6", "#34495e"],
-          data: [80,60,20]
+          data: [80,60]
         }
       ]
     },
@@ -342,13 +296,13 @@
 </script>
         </div>
         <div class="col s12 m6 l6">
-          <h3 style="text-align: center;">IDE (fréquences d'utilisation)</h3>
+          <h3 style="text-align: center;">Logiciels</h3>
           <canvas id="newlastpieChartss"></canvas>
           <script>
           new Chart(document.getElementById("newlastpieChartss"), {
    type: 'radar',
     data: {
-      labels: ["SublimeText", "Atom", "Ultra Edit", "Visual Code Editor", "Notepad++"],
+      labels: ["SublimeText", "Atom", "Visual Studio Code"],
       datasets: [
         {
           label: "/10",
@@ -357,7 +311,7 @@
           borderColor: "#2c3e50",
           pointBorderColor: "#2c3e50",
           pointBackgroundColor: "#2c3e50",
-          data: [9.50,4.61,5.00,7.50,2.00]
+          data: [8.50,9.61,9.00]
         }
       ]
     },
@@ -378,7 +332,7 @@
         {
           label: "Utilisation /100",
           backgroundColor: ["#1DABB8", "#9b59b6", "#34495e"],
-          data: [70,80,50]
+          data: [80,80,80]
         }
       ]
     },
@@ -386,7 +340,7 @@
       legend: { display: false },
       title: {
         display: true,
-        text: 'Predicted world population (millions) in 2050'
+        text: 'Forums/Communautés'
       }
     }
 });
@@ -435,9 +389,7 @@
       <div class="col s12 m12 l12" style="margin-top: 10px; margin-bottom: 50px;">
         <div class="carousel carousel-slider" data-indicators="true">
           <a class="carousel-item section scrollspy" href="#one!"><img src="./images/tosca.png" height="100%"></a>
-          <a class="carousel-item section scrollspy" href="#two!"><img src="./images/concours.png" height="100%"></a>
-          <a class="carousel-item section scrollspy" href="#three!"><img src="./images/burger.png" height="100%"></a>
-          <a class="carousel-item section scrollspy" href="#four!"><img src="./images/dev.png" height="100%"></a>
+          <a class="carousel-item section scrollspy" href="#one!"><img src="./images/Pharmacie.png" height="100%"></a>
         </div>
       </div>
     </div>
